2001-09-26  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>

	* general/UNames.hs: nhc98 1.08 doesn't grok deriving Ix

	* ../configure.in: better support for nhc98 

	* admin/BaseVersion.hs (versnum): 0.22.4

2001-05-20  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>

	* state/CIO.hs (doesFileExistCIO): added by Axel Simon <simona_@web.de>

2001-05-13  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>

	* Makefile (spotless): remove config.cache

2001-04-21  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>

	* ../configure.in: Adapted to support ghc 5.x and removed support
	for ghc 3.x

	* admin/BaseVersion.hs (versnum): 0.22.3

2000-10-05  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>

	* ../configure.in: uses the fptools macro for determining ghc's
	version number

2000-10-02  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>

	* errors/Errors.hs (showError): special handling of internal positions

	* admin/Common.hs: added internal positions

	* admin/BaseVersion.hs (versnum): 0.22.2

2000-09-15  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>

	* ../configure.in: corrected ghc version number extraction to
	correctly handle patch levels; added happy - most have gone lost
	earlier...

2000-09-12  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>

	* syntax/Pretty.hs (<>): debugged

2000-09-11  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>

	* syntax/Pretty.hs (Pretty): type class for pretty printing
	(infixOp): added
	(usedWhen): added
	(punctuate): added
	(dot): added

	* admin/BaseVersion.hs (versnum): 0.22.1

2000-09-07  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>

	* syntax/Pretty.hs: Revision of the interface; the interface is
	now 90% compatible to SimonPJ's `Pretty' module; debugging
	(fullRender): dropping leading '\n's
	some more combinators

	* admin/BaseVersion.hs (versnum): 0.22.0

2000-09-03  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>

	* admin/Common.hs (tabPos): Roman pointed out that tab stops